# work_reporter

./: README.md
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
backend/src/: Config.h  main.cpp
backend/src/db/: Database.cpp  Database.h
backend/src/middleware/: AuthGuard.cpp  AuthGuard.h
backend/src/models/: WorkReport.h
backend/src/repositories/: ReportRepository.cpp  ReportRepository.h  UserRepository.cpp  UserRepository.h
backend/src/routes/: AuthRoutes.cpp  AuthRoutes.h  ReportRoutes.cpp  ReportRoutes.h
backend/src/services/: AuthService.cpp  AuthService.h  ReportService.cpp  ReportService.h
